01_simple_vpc/vpc.tf
# terraform block. This block sets up the necessary details regarding the providers that will be used in your configuration. In this case, the AWS provider is required.

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

# provider block. Here, you need to specify the region in which your resources will be created. And profile to be used.
provider "aws" {
  region = "us-west-2"
  profile = "terraform"
}

# aws_vpc resource. You need to specify a CIDR block for your VPC, as well as the Name tag with the value Terraform VPC.
resource "aws_vpc" "terraform_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Terraform VPC"
  }
}

# aws_subnet resource. Make sure to reference your VPC ID and set an appropriate CIDR block for each subnet.
resource "aws_subnet" "public_subnet" {
  vpc_id     = aws_vpc.terraform_vpc.id
  cidr_block = "10.0.0.0/24"
}

resource "aws_subnet" "private_subnet" {
  vpc_id     = aws_vpc.terraform_vpc.id
  cidr_block = "10.0.1.0/24"
}

# aws_internet_gateway resource.
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.terraform_vpc.id
}

# aws_route_table resource. This table will direct all traffic (0.0.0.0/0) to the Internet gateway.
resource "aws_route_table" "public_rtb" {
  vpc_id = aws_vpc.terraform_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

# Associate the route table with your public subnet using the aws_route_table_association resource.
resource "aws_route_table_association" "public_subnet" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rtb.id
}
